Fix #current-track vertical alignment

--- a/source/stylesheets/_queue.css.sass
+++ b/source/stylesheets/_queue.css.sass
@@ -8,6 +8,7 @@
     position: relative
     background-size: 100% auto
     transition: all 0.2s
+    -webkit-align-items: flex-start
     &.dragover
       border-top: 2px $blue solid
 
